# docgarden

./: .gitignore  AGENTS.md  README.md  SPEC-FULL.md  pyproject.toml
.agents/skills/docgarden-slice-orchestrator/: SKILL.md
.docgarden/: config.yaml  findings.jsonl  plan.json  score.json
.github/workflows/: docgarden-nightly.yml  docgarden-pr.yml  docgarden-weekly-review.yml
docgarden/: __init__.py  __main__.py  automation.py  cli.py  cli_commands.py  cli_plan_review.py  cli_slices.py  cli_slices_commands.py  cli_slices_runtime.py  config.py  errors.py  files.py  fixers.py  markdown.py  models.py  pr_drafts.py  quality.py  scan_alignment.py  scan_document_rules.py  scan_linkage.py  scan_workflow.py  scanner.py  slice_automation.py  state.py
docgarden/scan/: __init__.py  alignment.py  document_rules.py  findings.py  linkage.py  scanner.py  workflow.py
docgarden/slices/: __init__.py  catalog.py  config.py  prompts.py  review_progress.py  run_agent.py  run_execution.py  run_recovery.py  run_status.py  runner.py
docs/: PLANS.md  QUALITY_SCORE.md  architecture.md  ci-setup.md  commands.md  concepts.md  configuration.md  getting-started.md  index.md
docs/design-docs/: docgarden-agent-prompts.md  docgarden-implementation-slices.md  docgarden-spec.md  index.md
docs/exec-plans/active/: 2026-03-08-desloppify-code-health.md  2026-03-08-docgarden-mvp.md  2026-03-09-docgarden-alignment-phase-2.md  (+3 more)
scripts/: codex-otel-no-proxy.patch  reapply_codex_macos_proxy_fix.sh
tests/: test_cli.py  test_docgarden.py  test_slice_automation.py  test_support_modules.py
(+8 files in other folders)
